<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserClassListActivity"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal" >


        <TextView
            android:id="@+id/course_edit_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="Example"
            android:textSize="25dp"
            android:inputType="text" />


        <Button
            android:id="@+id/delete_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"

            android:background="@android:drawable/ic_delete"
            android:visibility="gone"
            android:onClick="onDelete" />


    </LinearLayout>

    <Button
        android:id="@+id/add_field_button_LD"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="#555"
        android:onClick="onAddAClassClicked"
        android:paddingLeft="5dp"
        android:text="Add Class"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/finished"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_gravity="center"
        android:onClick="onFinishedClicked"
        android:text="Finished Entering" />

</LinearLayout>